<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haptic_pkg</name>
  <version>0.0.0</version>
  <description>package to run haptic sdk</description>
  <maintainer email="harsh.wadibhasme@addverb.com">harshwadibhasme</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>


  <!-- Message generation dependencies (if you have custom messages) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <environment_hook>share/${PROJECT_NAME}/environment/library_path.dsv</environment_hook>
  </export>
</package>
